[gd_scene load_steps=16 format=4 uid="uid://b0kr21ws20ftn"]

[ext_resource type="Texture2D" uid="uid://bpqe8bduydbxb" path="res://scenes/main/ground.png" id="1_emf81"]
[ext_resource type="PackedScene" uid="uid://c6ykuu4vd2pca" path="res://scenes/bunny/bunny.tscn" id="1_oh8ax"]
[ext_resource type="Script" path="res://scenes/main/tile_map_layer.gd" id="2_rkv5l"]
[ext_resource type="PackedScene" uid="uid://vacvd5gi5h4y" path="res://scenes/cloud/cloud.tscn" id="4_13tmj"]
[ext_resource type="Script" path="res://scenes/main/spawner.gd" id="5_4cben"]
[ext_resource type="Script" path="res://scenes/main/hud.gd" id="6_ix7if"]
[ext_resource type="FontFile" uid="uid://eg37l3twt6m5" path="res://fonts/neodgm.ttf" id="6_rcajn"]
[ext_resource type="Script" path="res://scenes/main/score_timer.gd" id="8_ukdt6"]
[ext_resource type="PackedScene" uid="uid://dhdl8h0vvf6ai" path="res://scenes/sit_skill/sit_skill.tscn" id="9_6shx1"]
[ext_resource type="AudioStream" uid="uid://djl00f5gwci4t" path="res://sounds/i_am_just_running.wav" id="9_hq5v3"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3rpvc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_skwg3"]
texture = ExtResource("1_emf81")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_iqwd4"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_3rpvc")
sources/4 = SubResource("TileSetAtlasSource_skwg3")

[sub_resource type="LabelSettings" id="LabelSettings_pavux"]
font = ExtResource("6_rcajn")
font_size = 40
outline_size = 10
outline_color = Color(0.215686, 0.215686, 0.215686, 1)
shadow_color = Color(1, 1, 1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_yb7ux"]
font = ExtResource("6_rcajn")
font_size = 32
font_color = Color(0.215686, 0.215686, 0.215686, 1)
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0.803922, 0.803922, 0.803922, 1)

[node name="Main" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAsABAACAAAAAAABAAsABAACAAAAAAACAAsABAACAAAAAAADAAsABAACAAAAAAAEAAsABAACAAAAAAAFAAsABAACAAAAAAAGAAsABAACAAAAAAAHAAsABAACAAAAAAAIAAsABAACAAAAAAAJAAsABAACAAAAAAAKAAsABAACAAAAAAALAAsABAACAAAAAAAMAAsABAACAAAAAAANAAsABAACAAAAAAAOAAsABAACAAAAAAAPAAsABAACAAAAAAAQAAsABAACAAAAAAARAAsABAACAAAAAAASAAsABAACAAAAAAATAAsABAACAAAAAAAAAAoABAACAAAAAAABAAoABAACAAAAAAACAAoABAACAAAAAAADAAoABAACAAAAAAAEAAoABAACAAAAAAAFAAoABAACAAAAAAAGAAoABAACAAAAAAAHAAoABAACAAAAAAAIAAoABAACAAAAAAAJAAoABAACAAAAAAAKAAoABAACAAAAAAALAAoABAACAAAAAAAMAAoABAACAAAAAAANAAoABAACAAAAAAAOAAoABAACAAAAAAAPAAoABAACAAAAAAAQAAoABAACAAAAAAARAAoABAACAAAAAAASAAoABAACAAAAAAATAAoABAACAAAAAAAAAAkABAAAAAAAAAABAAkABAAAAAAAAAACAAkABAAAAAAAAAADAAkABAAAAAAAAAAEAAkABAAAAAAAAAAFAAkABAAAAAAAAAAGAAkABAAAAAAAAAAHAAkABAAAAAAAAAAIAAkABAAAAAAAAAAJAAkABAAAAAAAAAAKAAkABAAAAAAAAAALAAkABAAAAAAAAAAMAAkABAAAAAAAAAANAAkABAAAAAAAAAAOAAkABAAAAAAAAAAPAAkABAAAAAAAAAAQAAkABAAAAAAAAAARAAkABAAAAAAAAAASAAkABAAAAAAAAAATAAkABAAAAAAAAAAAAAAABAADAAAAAAABAAAABAADAAAAAAACAAAABAADAAAAAAADAAAABAADAAAAAAAEAAAABAADAAAAAAAFAAAABAADAAAAAAAGAAAABAADAAAAAAAHAAAABAADAAAAAAAIAAAABAADAAAAAAAJAAAABAADAAAAAAAKAAAABAADAAAAAAALAAAABAADAAAAAAAMAAAABAADAAAAAAANAAAABAADAAAAAAAOAAAABAADAAAAAAAPAAAABAADAAAAAAAQAAAABAADAAAAAAARAAAABAADAAAAAAASAAAABAADAAAAAAATAAAABAADAAAAAAATAAgABAABAAAAAAATAAcABAADAAAAAAATAAYABAADAAAAAAATAAUABAADAAAAAAATAAQABAADAAAAAAATAAMABAADAAAAAAATAAIABAADAAAAAAATAAEABAADAAAAAAAAAAgABAABAAAAAAABAAgABAABAAAAAAACAAgABAABAAAAAAADAAgABAABAAAAAAAEAAgABAABAAAAAAAFAAgABAABAAAAAAAGAAgABAABAAAAAAAHAAgABAABAAAAAAAIAAgABAABAAAAAAAJAAgABAABAAAAAAAKAAgABAABAAAAAAALAAgABAABAAAAAAAMAAgABAABAAAAAAANAAgABAABAAAAAAAOAAgABAABAAAAAAAPAAgABAABAAAAAAAQAAgABAABAAAAAAARAAgABAABAAAAAAASAAgABAABAAAAAAAAAAIABAADAAAAAAABAAIABAADAAAAAAACAAIABAADAAAAAAAAAAEABAADAAAAAAAAAAMABAADAAAAAAAAAAQABAADAAAAAAAAAAUABAADAAAAAAAAAAYABAADAAAAAAAAAAcABAADAAAAAAABAAcABAADAAAAAAACAAcABAADAAAAAAADAAcABAADAAAAAAAEAAcABAADAAAAAAAFAAcABAADAAAAAAAGAAcABAADAAAAAAAHAAcABAADAAAAAAAIAAcABAADAAAAAAAJAAcABAADAAAAAAAKAAcABAADAAAAAAALAAcABAADAAAAAAAMAAcABAADAAAAAAANAAcABAADAAAAAAAOAAcABAADAAAAAAAPAAcABAADAAAAAAAQAAcABAADAAAAAAARAAcABAADAAAAAAASAAcABAADAAAAAAASAAIABAADAAAAAAASAAEABAADAAAAAAAGAAQABAADAAAAAAAGAAMABAADAAAAAAAGAAIABAADAAAAAAAGAAEABAADAAAAAAAFAAEABAADAAAAAAAEAAEABAADAAAAAAADAAEABAADAAAAAAACAAEABAADAAAAAAABAAEABAADAAAAAAADAAIABAADAAAAAAADAAMABAADAAAAAAACAAMABAADAAAAAAABAAMABAADAAAAAAABAAQABAADAAAAAAABAAUABAADAAAAAAABAAYABAADAAAAAAACAAYABAADAAAAAAACAAUABAADAAAAAAACAAQABAADAAAAAAADAAQABAADAAAAAAADAAUABAADAAAAAAADAAYABAADAAAAAAAEAAYABAADAAAAAAAEAAUABAADAAAAAAAEAAQABAADAAAAAAAEAAMABAADAAAAAAAEAAIABAADAAAAAAAFAAIABAADAAAAAAAFAAMABAADAAAAAAAFAAQABAADAAAAAAAFAAUABAADAAAAAAAFAAYABAADAAAAAAAGAAYABAADAAAAAAAGAAUABAADAAAAAAAHAAUABAADAAAAAAAHAAQABAADAAAAAAAHAAMABAADAAAAAAAHAAIABAADAAAAAAAHAAEABAADAAAAAAAIAAEABAADAAAAAAAIAAIABAADAAAAAAAIAAMABAADAAAAAAAIAAQABAADAAAAAAAIAAUABAADAAAAAAAIAAYABAADAAAAAAAHAAYABAADAAAAAAAJAAYABAADAAAAAAAJAAUABAADAAAAAAAJAAQABAADAAAAAAAJAAMABAADAAAAAAAJAAIABAADAAAAAAAJAAEABAADAAAAAAAKAAEABAADAAAAAAAKAAIABAADAAAAAAAKAAMABAADAAAAAAAKAAQABAADAAAAAAAKAAUABAADAAAAAAAKAAYABAADAAAAAAALAAYABAADAAAAAAALAAUABAADAAAAAAALAAQABAADAAAAAAALAAMABAADAAAAAAALAAIABAADAAAAAAALAAEABAADAAAAAAAMAAEABAADAAAAAAAMAAIABAADAAAAAAAMAAMABAADAAAAAAAMAAQABAADAAAAAAAMAAUABAADAAAAAAAMAAYABAADAAAAAAANAAYABAADAAAAAAANAAUABAADAAAAAAANAAQABAADAAAAAAANAAMABAADAAAAAAANAAIABAADAAAAAAANAAEABAADAAAAAAAOAAEABAADAAAAAAAOAAIABAADAAAAAAAOAAMABAADAAAAAAAOAAQABAADAAAAAAAOAAUABAADAAAAAAAOAAYABAADAAAAAAAPAAYABAADAAAAAAAPAAUABAADAAAAAAAPAAQABAADAAAAAAAPAAMABAADAAAAAAAPAAIABAADAAAAAAAPAAEABAADAAAAAAAQAAEABAADAAAAAAAQAAIABAADAAAAAAAQAAMABAADAAAAAAAQAAQABAADAAAAAAAQAAUABAADAAAAAAAQAAYABAADAAAAAAARAAYABAADAAAAAAARAAUABAADAAAAAAARAAQABAADAAAAAAARAAMABAADAAAAAAARAAIABAADAAAAAAARAAEABAADAAAAAAASAAMABAADAAAAAAASAAQABAADAAAAAAASAAUABAADAAAAAAASAAYABAADAAAAAAAUAAkABAAAAAAAAAAVAAkABAAAAAAAAAAWAAkABAAAAAAAAAAXAAkABAAAAAAAAAAYAAkABAAAAAAAAAAZAAkABAAAAAAAAAAaAAkABAAAAAAAAAAbAAkABAAAAAAAAAAcAAkABAAAAAAAAAAdAAkABAAAAAAAAAAeAAkABAAAAAAAAAAfAAkABAAAAAAAAAAgAAkABAAAAAAAAAAhAAkABAAAAAAAAAAiAAkABAAAAAAAAAAjAAkABAAAAAAAAAAkAAkABAAAAAAAAAAlAAkABAAAAAAAAAAmAAkABAAAAAAAAAAnAAkABAAAAAAAAAAUAAgABAABAAAAAAAVAAgABAABAAAAAAAWAAgABAABAAAAAAAXAAgABAABAAAAAAAYAAgABAABAAAAAAAZAAgABAABAAAAAAAaAAgABAABAAAAAAAbAAgABAABAAAAAAAcAAgABAABAAAAAAAdAAgABAABAAAAAAAeAAgABAABAAAAAAAfAAgABAABAAAAAAAgAAgABAABAAAAAAAhAAgABAABAAAAAAAiAAgABAABAAAAAAAjAAgABAABAAAAAAAkAAgABAABAAAAAAAlAAgABAABAAAAAAAmAAgABAABAAAAAAAnAAgABAABAAAAAAAUAAoABAACAAAAAAAVAAoABAACAAAAAAAWAAoABAACAAAAAAAXAAoABAACAAAAAAAYAAoABAACAAAAAAAZAAoABAACAAAAAAAaAAoABAACAAAAAAAbAAoABAACAAAAAAAcAAoABAACAAAAAAAdAAoABAACAAAAAAAeAAoABAACAAAAAAAfAAoABAACAAAAAAAgAAoABAACAAAAAAAhAAoABAACAAAAAAAiAAoABAACAAAAAAAjAAoABAACAAAAAAAkAAoABAACAAAAAAAlAAoABAACAAAAAAAmAAoABAACAAAAAAAnAAoABAACAAAAAAAnAAsABAACAAAAAAAmAAsABAACAAAAAAAlAAsABAACAAAAAAAkAAsABAACAAAAAAAjAAsABAACAAAAAAAiAAsABAACAAAAAAAhAAsABAACAAAAAAAgAAsABAACAAAAAAAfAAsABAACAAAAAAAeAAsABAACAAAAAAAdAAsABAACAAAAAAAcAAsABAACAAAAAAAbAAsABAACAAAAAAAaAAsABAACAAAAAAAZAAsABAACAAAAAAAYAAsABAACAAAAAAAXAAsABAACAAAAAAAWAAsABAACAAAAAAAVAAsABAACAAAAAAAUAAsABAACAAAAAAAUAAcABAADAAAAAAAUAAYABAADAAAAAAAUAAUABAADAAAAAAAUAAQABAADAAAAAAAUAAMABAADAAAAAAAUAAIABAADAAAAAAAUAAEABAADAAAAAAAUAAAABAADAAAAAAAVAAAABAADAAAAAAAWAAAABAADAAAAAAAXAAAABAADAAAAAAAYAAAABAADAAAAAAAZAAAABAADAAAAAAAaAAAABAADAAAAAAAbAAAABAADAAAAAAAcAAAABAADAAAAAAAdAAAABAADAAAAAAAeAAAABAADAAAAAAAfAAAABAADAAAAAAAgAAAABAADAAAAAAAhAAAABAADAAAAAAAiAAAABAADAAAAAAAjAAAABAADAAAAAAAkAAAABAADAAAAAAAlAAAABAADAAAAAAAmAAAABAADAAAAAAAnAAAABAADAAAAAAAnAAEABAADAAAAAAAnAAIABAADAAAAAAAnAAMABAADAAAAAAAnAAQABAADAAAAAAAnAAUABAADAAAAAAAnAAYABAADAAAAAAAnAAcABAADAAAAAAAYAAMABAADAAAAAAAYAAIABAADAAAAAAAYAAEABAADAAAAAAAXAAEABAADAAAAAAAWAAEABAADAAAAAAAVAAEABAADAAAAAAAVAAIABAADAAAAAAAVAAMABAADAAAAAAAVAAQABAADAAAAAAAVAAUABAADAAAAAAAVAAYABAADAAAAAAAVAAcABAADAAAAAAAWAAcABAADAAAAAAAWAAYABAADAAAAAAAWAAUABAADAAAAAAAWAAQABAADAAAAAAAWAAMABAADAAAAAAAWAAIABAADAAAAAAAXAAIABAADAAAAAAAXAAMABAADAAAAAAAXAAQABAADAAAAAAAXAAUABAADAAAAAAAXAAYABAADAAAAAAAXAAcABAADAAAAAAAYAAcABAADAAAAAAAYAAYABAADAAAAAAAYAAUABAADAAAAAAAYAAQABAADAAAAAAAZAAQABAADAAAAAAAZAAMABAADAAAAAAAZAAIABAADAAAAAAAZAAEABAADAAAAAAAaAAEABAADAAAAAAAaAAIABAADAAAAAAAaAAMABAADAAAAAAAaAAQABAADAAAAAAAaAAUABAADAAAAAAAZAAUABAADAAAAAAAZAAYABAADAAAAAAAZAAcABAADAAAAAAAaAAcABAADAAAAAAAaAAYABAADAAAAAAAbAAYABAADAAAAAAAbAAUABAADAAAAAAAbAAQABAADAAAAAAAbAAMABAADAAAAAAAbAAIABAADAAAAAAAbAAEABAADAAAAAAAcAAEABAADAAAAAAAcAAIABAADAAAAAAAcAAMABAADAAAAAAAcAAQABAADAAAAAAAcAAUABAADAAAAAAAcAAYABAADAAAAAAAcAAcABAADAAAAAAAbAAcABAADAAAAAAAdAAcABAADAAAAAAAdAAYABAADAAAAAAAdAAUABAADAAAAAAAdAAQABAADAAAAAAAdAAMABAADAAAAAAAdAAIABAADAAAAAAAdAAEABAADAAAAAAAeAAEABAADAAAAAAAeAAIABAADAAAAAAAeAAMABAADAAAAAAAeAAQABAADAAAAAAAeAAUABAADAAAAAAAeAAYABAADAAAAAAAeAAcABAADAAAAAAAfAAcABAADAAAAAAAfAAYABAADAAAAAAAfAAUABAADAAAAAAAfAAQABAADAAAAAAAfAAMABAADAAAAAAAfAAIABAADAAAAAAAfAAEABAADAAAAAAAgAAEABAADAAAAAAAgAAIABAADAAAAAAAgAAMABAADAAAAAAAgAAQABAADAAAAAAAgAAUABAADAAAAAAAgAAYABAADAAAAAAAgAAcABAADAAAAAAAhAAcABAADAAAAAAAhAAYABAADAAAAAAAhAAUABAADAAAAAAAhAAQABAADAAAAAAAhAAMABAADAAAAAAAhAAIABAADAAAAAAAhAAEABAADAAAAAAAiAAEABAADAAAAAAAiAAIABAADAAAAAAAiAAMABAADAAAAAAAiAAQABAADAAAAAAAiAAUABAADAAAAAAAiAAYABAADAAAAAAAiAAcABAADAAAAAAAjAAcABAADAAAAAAAjAAYABAADAAAAAAAjAAUABAADAAAAAAAjAAQABAADAAAAAAAjAAMABAADAAAAAAAjAAIABAADAAAAAAAjAAEABAADAAAAAAAkAAEABAADAAAAAAAkAAIABAADAAAAAAAkAAMABAADAAAAAAAkAAQABAADAAAAAAAkAAUABAADAAAAAAAkAAYABAADAAAAAAAkAAcABAADAAAAAAAlAAcABAADAAAAAAAlAAYABAADAAAAAAAlAAUABAADAAAAAAAlAAQABAADAAAAAAAlAAMABAADAAAAAAAlAAIABAADAAAAAAAlAAEABAADAAAAAAAmAAEABAADAAAAAAAmAAIABAADAAAAAAAmAAMABAADAAAAAAAmAAQABAADAAAAAAAmAAUABAADAAAAAAAmAAYABAADAAAAAAAmAAcABAADAAAAAAA=")
tile_set = SubResource("TileSet_iqwd4")
script = ExtResource("2_rkv5l")

[node name="Cloud" parent="." instance=ExtResource("4_13tmj")]
scale = Vector2(1, 1)

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("5_4cben")

[node name="Timer" type="Timer" parent="Spawner"]

[node name="Bunny" parent="." instance=ExtResource("1_oh8ax")]
z_index = 10
position = Vector2(100, 288)
scale = Vector2(3, 3)

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("6_ix7if")

[node name="StartLabel" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press SPACE to start game"
label_settings = SubResource("LabelSettings_pavux")

[node name="RestartLabel" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press SPACE to restart game"
label_settings = SubResource("LabelSettings_pavux")

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 47.0
grow_horizontal = 2

[node name="BestScoreMarginContainer" type="MarginContainer" parent="HUD/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15

[node name="BestScoreLabel" type="Label" parent="HUD/HBoxContainer/BestScoreMarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "BEST: 00000"
label_settings = SubResource("LabelSettings_yb7ux")

[node name="ScoreMarginContainer" type="MarginContainer" parent="HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20

[node name="ScoreLabel" type="Label" parent="HUD/HBoxContainer/ScoreMarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "SCORE: 00000"
label_settings = SubResource("LabelSettings_yb7ux")

[node name="ScoreTimer" type="Timer" parent="HUD"]
script = ExtResource("8_ukdt6")

[node name="SitSkill" parent="HUD" instance=ExtResource("9_6shx1")]
visible = false
offset_left = 20.0
offset_top = 60.0
offset_right = 84.0
offset_bottom = 124.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_hq5v3")
volume_db = -10.0
autoplay = true
